--- a/exercise3/exercise3_box_model.html
+++ b/exercise3/exercise3_box_model.html
@@ -33,10 +33,59 @@ Bonus points: Use the Google box and figure out how to apply a gradient as a bac
 <!-- DROP YOUR CSS HERE ======================================= -->
       <style>
 
+
       h1 {
         font-size: 2em;
         margin-bottom: 20px;
         }
+
+        .box1 p {
+        color: blue;
+        font-weight: bold;
+      }
+        .box2 {
+        color: green;
+        margin-top: 15px;
+        font-weight: bold;
+      } 
+
+        .box3 {
+        color: gray;
+        margin-top: 15px;
+        font-weight: bold;
+      }
+
+      .box1 {
+        border: red;
+        border-style: solid;
+        margin-top: 75px;
+        padding: 15px 15px;
+        width: 300px;
+        float: left;
+        margin-left: 100px;
+        background-image: url("images/trees.png");
+      }
+      .box2 {
+        border: gold;
+        border-style: solid;
+        padding: 15px 15px;
+        width: 300px;
+        float: left;
+        margin-left: 50px;
+        margin-top: 115px;
+        background-image: url("images/blue-snow.png");
+      }
+
+      .box3 {
+        border: black;
+        border-style: solid;
+        padding: 15px 15px;
+        width: 300px;
+        float: left;
+        margin-left: 50px;
+        margin-top: 150px;
+        background-image: url("images/let-there-be-sun.png");
+      }
 
 
       </style>
