--- a/exercise6/exercise6_icon_sets.html
+++ b/exercise6/exercise6_icon_sets.html
@@ -45,6 +45,12 @@ load them in yourself.
             Or, jut go wild and see what you can create. Frankly, jut getting them
             loaded and working would suffice.-->
 
+            
+            <ul>
+                <li><a href="http://facebook.com" target="_blank"><img src="img/facebook.svg"></a></li>
+                <li><a href="http://instagram.com" target="_blank"><img src="img/instagram.svg"></a></li>
+                <li><a href="http://twitter.com" target="_blank"><img src="img/twitter.svg"></a></li>
+            </ul>
 
         </div>
     </body>
